*SVN*

* Added TextHelper#word_wrap(text, line_length = 80) #1449 [tuxie@dekadance.se]

* Added a fall-through action for form_remote_tag that'll be used in case Javascript is unavailable #1459 [Scott Barron]. Example:

    form_remote_tag :html => { :action => url_for(:controller => "some", :action => "place") }

* Added :xhr => true/false option to verify so you can ensure that a request is coming from an Ajax call or not #1464 [Thomas Fuchs]

* Added tag_options as a third parameter to AssetHelper#auto_discovery_link_tag to control options like the title of the link #1430 [kevin.clark@gmail.com]

* Added option to pass in parameters to CaptureHelper#capture, so you can create more advanced view helper methods #1466 [duane.johnson@gmail.com]. Example:

    <% show_calendar(:year => 2005, :month => 6) do |day, options| %>
      <% options[:bgcolor] = '#dfd' if 10..15.include? day %>
      [<%= day %>]
    <% end %>

* Changed the default name of the input tag generated by FormTagHelper#submit_tag from "submit" to "commit" so it doesn't clash with form.submit() calls in Javascript #1271

* Fixed relative urls support for lighttpd #1048 [Nicholas Seckar/maznawak@nerim.net]

* Correct distance_of_time_in_words for integer arguments and make the second arg optional, treating the first arg as a duration in seconds.  #1458 [madrobby <thomas@fesch.at>]

* Fixed query parser to deal gracefully with equal signs inside keys and values #1345 [gorou]. 
  Example: /?sig=abcdef=:foobar=&x=y will pass now. 

* Added Cuba to country list #1351 [todd]

* Fixed radio_button to work with numeric values #1352 [demetrius]

* Added :extension option to NumberHelper#number_to_phone #1361 [delynnb]
