@@ -65,13 +65,13 @@ class DispatchServlet < WEBrick::HTTPServlet::AbstractServlet
   def service(req, res)
     begin
       unless handle_file(req, res)
-        REQUEST_MUTEX.lock unless RAILS_ENV == 'production'
+        REQUEST_MUTEX.lock unless ActionController::Base.allow_concurrency
         unless handle_dispatch(req, res)
           raise WEBrick::HTTPStatus::NotFound, "`#{req.path}' not found."
         end
       end
     ensure
-      unless RAILS_ENV == 'production'
+      unless ActionController::Base.allow_concurrency
         REQUEST_MUTEX.unlock if REQUEST_MUTEX.locked?
       end
     end
